--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
             "email": "paulmaj90@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": ">=8"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
+    }
 }
