--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,10 @@
         }
     ],
     "require": {
-        "php": ">=8"
+        "php": ">=8.2",
+        "ramsey/uuid": "^4.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^10"
     }
 }
