--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
         "php": ">=8.2",
-        "ramsey/uuid": "^4.7"
+        "ramsey/uuid": "^4.7",
+        "webmozart/assert": "^1.11"
     },
     "require-dev": {
         "phpunit/phpunit": "^10"
