--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "webmozart/assert": "^1.11"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10"
+        "phpunit/phpunit": "^10",
+        "friendsofphp/php-cs-fixer": "^3.23"
     }
 }
