--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^10",
-        "friendsofphp/php-cs-fixer": "^3.23"
+        "friendsofphp/php-cs-fixer": "^3.23",
+        "phpstan/phpstan": "^1.10"
     }
 }
